# hh_vacancy_finder

./: .coverage  README.md  pyproject.toml
data/: vacancies.json
src/: api.py  hh_api.py  json_saver.py  main.py  models.py  utils.py  vacancies.py
test/: test_api.py  test_hh_api.py  test_json_saver.py  test_models.py  test_utils.py  test_vacancies.py
