[project]
name = "hh_vacancy_finder"
version = "0.1.0"
description = ""
authors = [
    {name = "Gridnev Nikita",email = "gridnevnikit4@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.black]
line-length = 119
exclude = ".git/"

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = ".venv/"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.16.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.1.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
